[package]
name = "hdlc"
edition = "2021"
version = "0.4.0"
authors = [
    "Christopher Lomanno <Lomannoc@gmail.com>",
    "Oskar Østby <oskar@oestby.io>",
]
description = "Rust implementation of HDLC with support of the IEEE standard"
keywords = ["hdlc", "frame", "framing", "byte-swap", "packetize"]
readme = "README.md"
repository = "https://github.com/CLomanno/hdlc"
documentation = "https://docs.rs/hdlc"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2.0"
hashbrown = { version = "0.16", optional = true }
cfg_block = "0.2.0"
embedded-io = { version = "0.7.1", optional = true }

[dev-dependencies]
criterion = "0.8"

[features]
default = ["std"]
std = []
no_std = ["dep:hashbrown", "dep:embedded-io"]

[[bench]]
name = "bench"
harness = false
